2002-05-14  wakaba <w@suika.fam.cx>

	* Entity.pm (pod:uri-url-mailto-*): New list-items.
	(stringify): Output mailto: URL when format =~ url-mailto.
	* Header.pm (stringify): Ditto.
	* Util.pm: Bugs are fixed.
	(remove_meaningless_wsp): New function.

2002-04-21  wakaba <w@suika.fam.cx>

	* Entity.pm (pod:C<format>): New section.

2002-04-05  wakaba <w@suika.fam.cx>

	* Util.pm: Add some functions from Message::Field::Structured.

2002-04-03  wakaba <w@suika.fam.cx>

	* Entity.pm, Header.pm: Updated.

2002-03-31  wakaba <w@suika.fam.cx>

	* Header.pm: Support Message::Field::URI.

2002-03-27  wakaba <w@suika.fam.cx>

	* Fix bug of treatment of FWS sorounding encoded-word.
	(MIME/EncodedWord.pm and related modules.)

2002-03-26  wakaba <w@suika.fam.cx>

	* Entity.pm: Adds User-Agent: value when stringify.
	(ua_field_name, ua_use_config): New options.
	(add_ua): New option.
	(_add_ua): New proceder.

2002-03-25  wakaba <w@suika.fam.cx>

	* MIME/: New directory.
	* Util.pm: New module.
	* Entity.pm, Header.pm (parse_all): New option.
	(hook_encode_string, hook_decode_string): Likewise.

2002-03-23  wakaba <w@suika.fam.cx>

	* Header.pm: Supports Message::Field::CSV,
	Message::Field::ValueParams, Message::Field::ContentType,
	Message::Field::ContentDisposition.

2002-03-21  wakaba <w@suika.fam.cx>

	* Body/: New directory.

2002-03-16  wakaba <w@suika.fam.cx>

	* Header.pm: Use Message::Field::Date.

2002-03-13  wakaba <w@suika.fam.cx>

	* Header.pm: New module.
	* Entity.pm: Likewise.
	
	* ChangeLog: New file.