@@ -1,3 +1,10 @@
+2002-05-15  wakaba <w@suika.fam.cx>
+
+	* Header.pm:
+	- Add Resent-User-Agent: field support.
+	- Use Message::Field::Addresses instead of 
+	Message::Field::Address.
+
 2002-05-14  wakaba <w@suika.fam.cx>
 
 	* Entity.pm (pod:uri-url-mailto-*): New list-items.
